doc: add get and post routes for sliders
